Añado remoción del token y página playlist generada desde música contextual

--- a/src/components/Profile/Sections/Header/index.css
+++ b/src/components/Profile/Sections/Header/index.css
@@ -13,6 +13,7 @@
     .header__profile-conteiner{
         display: flex;
         align-items: flex-start;
+        margin: 2rem;
     }
 
     .header__profile-img{
