--- a/src/main.css
+++ b/src/main.css
@@ -1,4 +1,4 @@
-@import 'normalize.css'; /* Importar Normalize.css antes de tus estilos personalizados */
+/*@import 'normalize.css'; /* Importar Normalize.css antes de tus estilos personalizados */
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
 
 :root {
