--- a/src/components/Playlist/Sections/Header/index.css
+++ b/src/components/Playlist/Sections/Header/index.css
@@ -6,6 +6,20 @@
         gap: 2rem;
     }
 
+    .header__title-conteiner{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .header__title-text{
+        font-family: 'Rubik', sans-serif;
+        font-size: 13px;
+        font-weight: 300;
+        line-height: 20px;
+        letter-spacing: 0.5px;
+    }
+
     .header__configuration-btn{
         background-color: transparent;
         border: none;
@@ -15,11 +29,15 @@
         width: 20px;
         height: 20px;
     }
-    .header__title{
+
+    .header__ham{
+        width: 30px;
+    }
+
+    .header__playlist-title{
         font-family: 'Rubik', sans-serif;
         font-size: 18px;
         font-weight: 500;
         line-height: 20px;
-        letter-spacing: 1.5px;
     }
 }
