--- a/src/main.css
+++ b/src/main.css
@@ -6,6 +6,7 @@
   --fnt-Heading-3: 500 26px 'Rubik';
 
   /* Color de texto */
+  --medios-tonos-gris-1: #e4e6e8;
   --medios-tonos-gris-5: #26262e;
 
   --clr-text-2: #e4e6e8;
