--- a/src/components/Others/AppContainer/styles.css
+++ b/src/components/Others/AppContainer/styles.css
@@ -1,30 +1,20 @@
 .appContainer {
-  height: min(100vh, 792px);
-  width: min(100vw, 368px);
-
-  background: var(--blanco);
+  height: 792px;
+  width: 368px;
 
   display: flex;
-  flex-direction: column;
   align-items: center;
+  flex-direction: column;
 
-  position: relative;
-  z-index: 5;
-}
+  font-family: 'Rubik', sans-serif;
 
-.bg-gradient {
-  width: 368px;
-  height: 160px;
-  position: relative;
-  z-index: 1;
-  
-  /* opacity: 0.25; */
-  
-  background:
-  linear-gradient(
+  background: linear-gradient(
     0deg,
     rgba(253, 254, 255, 0) 25%,
     rgba(255, 142, 10, 0.53) 75%,
     rgba(255, 142, 10, 0.9) 100%
-    );
+  );
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
 }
