--- a/src/components/Login/estilo.css
+++ b/src/components/Login/estilo.css
@@ -3,14 +3,14 @@ body{
     padding: 0;
    
 }
-p{
+/* p{
     margin: 0;
     padding: 0;
-}
-button{
+} */
+/* button{
     border-radius: 0px 16px 0px 16px;
 
-}
+} */
 .btn_pages{
     margin-top: 0;  
 }
@@ -47,7 +47,7 @@ button{
     margin-top: 50px;
 }
 
-label{
+/* label{
     display: flex;
     flex-direction: column;
     font-size: 26px;
@@ -59,7 +59,7 @@ input{
     height: 30px;
     border-radius: 0px 16px 0px 16px;
     margin-bottom: 40px;
-}
+} */
 #input_password{
     border: black 2px solid;
 }
