--- a/src/components/Playlist/Sections/Main/index.css
+++ b/src/components/Playlist/Sections/Main/index.css
@@ -26,7 +26,7 @@
         padding: 6px;
         border-radius: 0px 12px 0px 12px;
         border: none;
-        background-color: #FFFFFF;
+        background-color: transparent;
     }
 
     .main__playlist-verified{
