--- a/src/components/inicio/estilo.css
+++ b/src/components/inicio/estilo.css
@@ -1,8 +1,9 @@
-body{
+body {
     margin: 0;
 }
+
 .container {
-    background-image: url('../inicio/Gif_Auden.gif');
+    position: relative; /* Agrega posición relativa para que el pseudo-elemento sea posicionado respecto a este contenedor */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -11,34 +12,77 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 418px;
+    width: 368px;
 }
-.sub_container{
+
+/* Añadir pseudo-elemento ::before para representar la imagen de fondo */
+.container::before {
+    content: ""; /* Obligatorio para que el pseudo-elemento sea mostrado */
+    background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, white), url('../inicio/Gif_Auden.gif');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    filter: brightness(1);
+    z-index: -1; 
+}
+
+.sub_container {
     margin-top: 0px;
 }
-.btn_order{
+.logo_subtitle{
+    margin-bottom: 100px;
+}
+.second_header{
+    font-size: 26px;
+    font-weight: 400;
+}
+
+.btn_order {
     display: flex;
     flex-direction: column;
+    margin-bottom: 50px;
 }
-.btn{
+
+.btn {
     border-radius: 0px 40px;
     width: 80vw;
     height: 40px;
     border-radius: 0px 16px 0px 16px;
 }
-.btn_orange{
-    background-color:  #FF8E0A;
+
+.btn_orange {
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    background-color: #FF8E0A;
     color: white;
+    font-weight: 500;
+
 }
-.btn_wborders{
-    background-color: rgba(255, 255, 255, 0); 
+
+.btn_wborders {
+    background-color: rgba(255, 255, 255, 0);
     border: 2px solid black;
 }
-.btn_offborder{
+.btnMargin{
+    margin-top: 20px;
+    text-align: center;   
+}
+.pepew{
+    margin-top: 20px;
+    padding: 0;
+}
+
+.btn_offborders {
     border: 0;
     padding: 0;
-    background-color: rgba(255, 255, 255, 0);/* transparente */
+    background-color: rgba(255, 255, 255, 0); /* transparente */
     font-size: 16px;
     height: 30px;
-    padding: 12px 16px 12px 16px
+    padding: 12px 16px 12px 16px;
 }
