arreglos de NavLink
fh

--- a/src/components/Register/estilo.css
+++ b/src/components/Register/estilo.css
@@ -17,9 +17,9 @@ p{
     margin-bottom: 50px;
 
 }
-.arrow_position_2{
+/* .arrow_position_2{
     position: absolute;
     top: 0;
     left: 0;
     font-size: 20px;
-}
+} */
