--- a/src/components/inicio/estilo.css
+++ b/src/components/inicio/estilo.css
@@ -67,6 +67,7 @@ body {
 .btn_wborders {
     background-color: rgba(255, 255, 255, 0);
     border: 2px solid black;
+    font-size: 16px;
 }
 .btnMargin{
     margin-top: 20px;
